Don't recenter image document when URL bar hides

This patch changes the ImageDocument so that hiding the URL bar doesn't
attempt to vertically re-center an image that's wider than the viewport.

Bug: 718515
Change-Id: I0b45beb011c2c8dbc6f095a0456774f6f5e041ff
Reviewed-on: https://chromium-review.googlesource.com/700617
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507079}
Former-commit-id: a38acc8557b35c676bd5c936db0e1187bfa4ee57