third_party/WebKit/Source/core/testing/sim/SimRequest.cpp
@@ -54,6 +54,13 @@ void SimRequest::Write(const String& data) {
   client_->DidReceiveData(data.Utf8().data(), data.length());
 }
 
+void SimRequest::Write(const Vector<char>& data) {
+  DCHECK(is_ready_);
+  DCHECK(!error_.reason);
+  total_encoded_data_length_ += data.size();
+  client_->DidReceiveData(data.data(), data.size());
+}
+
 void SimRequest::Finish() {
   DCHECK(is_ready_);
   if (error_.reason) {
@@ -69,6 +76,13 @@ void SimRequest::Finish() {
 }
 
 void SimRequest::Complete(const String& data) {
+  Start();
+  if (!data.IsEmpty())
+    Write(data);
+  Finish();
+}
+
+void SimRequest::Complete(const Vector<char>& data) {
   Start();
   if (!data.IsEmpty())
     Write(data);
